<resources>
    <string name="app_name">Mechanic</string>

    <string name="cars">Cars</string>
    <string name="drivers">Drivers</string>
    <string name="documents">Documents</string>
    <string name="normative_documents">Normative documents</string>
    <string name="about">About the application</string>
    <string name="about_version">Version %1$s</string>
    <string name="about_description">Vehicle and driver records, fuel consumption rates, and normative documents in one place.</string>
    <string name="about_copyright">© 2026</string>
    <string name="about_copy_email">Copy email</string>
    <string name="about_email_copied">Email copied</string>
    <string name="developer_email" translatable="false">dgmedvedev.it@gmail.com</string>
    <string name="more_options">More</string>
    <string name="settings">Settings</string>
    <string name="settings_section_theme">Theme</string>
    <string name="settings_theme_system">System</string>
    <string name="settings_theme_light">Light</string>
    <string name="settings_theme_dark">Dark</string>
    <string name="settings_section_reminders">Expiry reminders</string>
    <string name="settings_reminders_enable">Notify about expiring documents</string>
    <string name="settings_reminders_enable_hint">Checkup, insurance, driving licence and medical certificate</string>
    <string name="settings_reminder_threshold_30">30 days before</string>
    <string name="settings_reminder_threshold_14">14 days before</string>
    <string name="settings_reminder_threshold_7">7 days before</string>
    <string name="settings_reminder_threshold_1">1 day before</string>
    <string name="settings_reminder_threshold_expired">Already expired</string>
    <string name="expiry_channel_name">Expiry reminders</string>
    <string name="expiry_channel_description">Reminders when car or driver documents are about to expire</string>
    <string name="expiry_notification_line">%1$s, %2$s</string>
    <string name="expiry_when_today">expires today</string>
    <string name="expiry_when_overdue">expired</string>
    <string name="expiry_when_in_one_day">in 1 day</string>
    <string name="expiry_when_in_days">in %1$d days</string>
    <string name="settings_section_data">Data</string>
    <string name="settings_backup_create">Create backup</string>
    <string name="settings_backup_create_hint">Save a copy of cars and drivers</string>
    <string name="settings_backup_restore">Restore</string>
    <string name="settings_backup_restore_hint">Replace current data from a backup file</string>
    <string name="settings_backup_restore_title">Restore from backup?</string>
    <string name="settings_backup_restore_message">Current cars and drivers will be replaced. The app will restart. This cannot be undone.</string>
    <string name="settings_backup_ready_title">Backup created</string>
    <string name="settings_backup_ready_message">Save the file on the device or send it.</string>
    <string name="settings_backup_save">Save</string>
    <string name="settings_backup_share">Send</string>
    <string name="settings_backup_saved">Backup saved</string>

    <string name="back">Back</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="delete_car_title">Delete car?</string>
    <string name="delete_driver_title">Delete driver?</string>
    <string name="delete_message">%1$s will be deleted. This cannot be undone.</string>
    <string name="discard_changes_title">Close without saving?</string>
    <string name="discard_changes_message">Your changes will not be saved.</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="add">Save</string>
    <string name="resolution_44">1. Resolution of the Ministry of Transport No.44 of 01.08.2019 \"On establishing fuel consumption rates in the field of transport activities\"</string>
    <string name="resolution_470">2. Resolution of the Council of Ministers of transport No.470 of 10.08.2020 \"On the procedure for establishing fuel consumption rates\"</string>

    <string name="error_backup_invalid">This file is not a backup of this application.</string>
    <string name="error_backup_incompatible">This backup was created in another app version</string>
    <string name="error_not_found">Data not found</string>
    <string name="error_storage_conflict">This data already exists</string>
    <string name="error_storage_unavailable">Unable to access the data</string>
    <string name="error_storage_full">Not enough space on the device. Free up space and try again.</string>
    <string name="error_storage_full_title">Not enough space</string>
    <string name="error_network_unavailable">No internet connection</string>
    <string name="error_document_invalid">The file is not a valid PDF document</string>
    <string name="error_document_not_found">Document is unavailable</string>
    <string name="error_unknown">An unknown error occurred</string>
    <string name="document_offline_copy">No internet. Showing the saved copy</string>
    <string name="retry">Retry</string>
    <string name="got_it">Got it</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="download">Download</string>
    <string name="document_open_saved">Open saved</string>
    <string name="document_download_title">Download document?</string>
    <string name="document_update_title">Update document?</string>
    <string name="document_download_confirm">File size: %1$s.\nDownloading may use mobile data.</string>
    <string name="document_download_confirm_unknown_size">File size is unknown.\nDownloading may use mobile data.</string>
    <string name="document_update_confirm">A new version is available. Size: %1$s.</string>
    <string name="document_update_confirm_unknown_size">A new version is available. Size is unknown.</string>
    <string name="document_size_mb">%1$.1f MB</string>
    <string name="document_size_kb">%1$d KB</string>
    <string name="document_search">Search</string>
    <string name="document_search_placeholder">Search</string>
    <string name="document_search_matches">%1$d of %2$d</string>
    <string name="document_search_no_matches">No matches</string>
    <string name="document_search_unavailable">Search unavailable</string>
    <string name="document_search_preparing">Preparing…</string>
    <string name="document_search_previous">Previous match</string>
    <string name="document_search_next">Next match</string>
    <string name="document_search_close">Close search</string>
    <string name="document_zoom_in">Zoom in</string>
    <string name="document_zoom_out">Zoom out</string>

    <string name="search_car">Car search</string>
    <string name="search_driver">Driver search</string>
    <string name="search_document">Document search</string>
    <string name="detail_empty_car">Add a car to see its details</string>
    <string name="detail_empty_driver">Add a driver to see their details</string>
    <string name="detail_empty_document">Select a document to open it</string>
    <string name="detail_empty_search">Nothing found</string>

    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="state_number">State number</string>
    <string name="year_production">Year production</string>
    <string name="engine_displacement">Displacement</string>
    <string name="fuel_type">Fuel type</string>
    <string name="fuel_type_petrol">Petrol</string>
    <string name="fuel_type_diesel">Diesel</string>
    <string name="fuel_type_gas">Gas</string>
    <string name="fuel_type_electric">Electric</string>
    <string name="fuel_type_hybrid">Hybrid</string>
    <string name="vin">VIN</string>
    <string name="allowable_weight">Allowable weight</string>
    <string name="technical_passport">Technical passport</string>
    <string name="checkup">Checkup</string>
    <string name="insurance">Insurance</string>
    <string name="hull_insurance">Hull insurance</string>
    <string name="car_section_data">Data</string>
    <string name="car_section_nrt">FCR</string>
    <string name="linear_fcr">Linear</string>
    <string name="summer_fcr">Summer</string>
    <string name="winter_fcr">Winter</string>
    <string name="in_the_city">in the city</string>
    <string name="outside_the_city">outside the city</string>

    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle name</string>
    <string name="birthday">Birthday</string>
    <string name="driving_license_number">DL number</string>
    <string name="driving_license_validity">DL validity</string>
    <string name="medical_certificate_validity">MC validity</string>
    <string name="required_label">%1$s*</string>

    <string name="car_logo">Car logo</string>

    <plurals name="total_cars">
        <item quantity="one">Total: %d car</item>
        <item quantity="other">Total: %d cars</item>
    </plurals>
    <plurals name="total_drivers">
        <item quantity="one">Total: %d driver</item>
        <item quantity="other">Total: %d drivers</item>
    </plurals>
    <plurals name="expiry_notification_title_many">
        <item quantity="one">%d document is expiring</item>
        <item quantity="other">%d documents are expiring</item>
    </plurals>

</resources>