<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context="com.medvedev.presentation.ui.fragments.drivers.DriverDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/activity"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/name" />

            <TextView
                android:id="@+id/tvName"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/surname" />

            <TextView
                android:id="@+id/tvSurname"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/middle_name" />

            <TextView
                android:id="@+id/tvMiddleName"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/birthday" />

            <TextView
                android:id="@+id/tvBirthday"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/medical_certificate" />

            <TextView
                android:id="@+id/tvMedicalCertificate"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/driving_license" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/driving_license_number" />

            <TextView
                android:id="@+id/tvDrivingLicenseNumber"
                style="@style/DetailsText" />
        </LinearLayout>

        <LinearLayout style="@style/LinearLayoutDetails">

            <TextView
                style="@style/tvDetailsName"
                android:text="@string/driving_license_validity" />

            <TextView
                android:id="@+id/tvDrivingLicenseValidity"
                style="@style/DetailsText" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <Button
                android:id="@+id/delete"
                style="@style/delete_button"
                android:text="@string/delete" />

            <Button
                android:id="@+id/edit"
                style="@style/delete_button"
                android:text="@string/edit" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>