<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/activity"
            android:orientation="vertical"
            android:padding="10dp">

        <LinearLayout
                style="@style/LinearLayoutDetails">

            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/name"/>
            <TextView
                    android:id="@+id/nameTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/surname"/>
            <TextView
                    android:id="@+id/surnameTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/middle_name"/>
            <TextView
                    android:id="@+id/middleNameTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/birthday"/>
            <TextView
                    android:id="@+id/birthdayTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/medical_certificate"/>
            <TextView
                    android:id="@+id/medicalCertificateTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/driving_license"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/driving_license_number"/>
            <TextView
                    android:id="@+id/drivingLicenseNumberTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <LinearLayout
                style="@style/LinearLayoutDetails">
            <TextView
                    style="@style/tvDetailsName"
                    android:text="@string/driving_license_validity"/>
            <TextView
                    android:id="@+id/drivingLicenseValidityTextView"
                    style="@style/DetailsText"/>
        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
            <Button
                    android:id="@+id/delete"
                    android:text="@string/delete"
                    style="@style/delete_button"/>
            <Button
                    android:id="@+id/edit"
                    android:text="@string/edit"
                    style="@style/delete_button"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>